@@ -29,6 +29,24 @@ java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,
 java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml -jar REALEASE/codingweek-01-RELEASE_DAY_2.jar 
 ```
 
+#### Jour 3
+
+```bash
+java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml -jar REALEASE/codingweek-01-RELEASE_DAY_3.jar 
+```
+
+#### Jour 4
+
+```bash
+java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml -jar REALEASE/codingweek-01-RELEASE_DAY_4.jar 
+```
+
+#### Jour 5
+
+```bash
+java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml -jar REALEASE/codingweek-01-RELEASE_DAY_5.jar 
+```
+
 **Voici différents scénarios :**
 * À l'écran de connexion :
   * *Vous avez un problème*
